<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrusoeNav</string>
    <string name="action_settings">Settings</string>
    <string name="action_mark">Mark</string>
    <string name="action_map">Map</string>
    <string name="hello_world">Hello world!</string>
	<string name="gps_signal_found">GPS Signal found</string>
    <string name="gps_signal_not_found">GPS Signal not found</string>
    <string name="action_quit">Quit</string>
    <string name="mark_menu_name">Mark Menu</string>
    <string name="action_track">Track</string>
    <string name="action_goto">GoTo</string>
    <string name="goto_name">GoTo List</string>
    <string name="action_compass">Compass</string>
    <string name="action_route">Routes</string>
    <string name="data_latitud">LATITUDE</string>
    <string name="data_longitud">LONGITUDE</string>
    <string name="data_speed">SPEED</string>
    <string name="data_direction">COURSE</string>
    <string name="data_accuracy">ACCURACY</string>
    <string name="data_distance">DISTANCE</string>
    <string name="error_mark">Can\'t find the Waypoint list</string>
    <string name="error_gps_pos">Can\'t find GPS position</string>
    <string name="error_no_wpt">There are no Waypoints stored</string>
    <string name="error_no_routes">There are no Routes stored</string>
    <string name="action_Agregar">Add</string>
    <string name="gps_track_saved">waypoints saved</string>
    <string name="DMS">00:00:00</string>
    <string-array name="GoTo_menues">
        <item >Activate</item>
        <item >Invert</item>
        <item >Edit</item>
    </string-array>
    <string-array name="Route_menues">
        <item >Activate</item>
        <item >Invert</item>
        <item>Delete</item>
        <item >Edit</item>        
    </string-array>
    <string-array name="Route_Edit_menues">
        <item>Insert</item>
        <item>Delete</item>
        <item >Move Up</item>
        <item >Move Down</item>        
    </string-array>
    <string name="NotImplemented">Not implemented yet</string>
    <string name="RouteNotExist">The Route selected doesnt exist</string>
    <string name="wpt_name">WayPoint</string>
    <string name="msg_approach">Approaching to </string>
    <string name="ActiveRoute">Cannot Edit or Delete Active Route</string>
    <string name="action_import">Import</string>
    <string name="msg_no_route">No Route Selected</string>
    <string name="metrics">Metric System</string>
    <string name="nautic_miles">Nautic Miles</string>
    <string name="Cfg">Configuration</string>
    <string name="cfg_nautic">NM</string>
    <string name="cfg_km">KM</string>
    <string name="action_loc">Location</string>
    <string name="Online">Online</string>
    <string name="Offline">Offline</string>
</resources>
