<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cfgdlg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/default_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="false"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color" />

    <RadioGroup
        android:id="@+id/crusoe_metrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVersion" >

        <RadioButton
            android:id="@+id/radio_metrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/metrics"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/radio_miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/nautic_miles"
            android:textColor="@color/text_color" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/MapsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/crusoe_metrics" >

        <RadioButton
            android:id="@+id/OfflineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Offline"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/OnlineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Online"
            android:textColor="@color/text_color" />
    </RadioGroup>
</RelativeLayout>
